Update rf_nat filename according to the latest release

--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -21,7 +21,7 @@ zones = readRDS(file.path(pct_data, region, "z.Rds"))
 cents = readRDS(file.path(pct_data, region, "c.Rds"))
 l = readRDS(file.path(pct_data, region, "l.Rds"))
 if(!exists("rf_nat"))
-  rf_nat <- readRDS(file.path(pct_bigdata, "rf.Rds"))
+  rf_nat <- readRDS(file.path(pct_bigdata, "rf_nat.Rds"))
 rf = readRDS(file.path(pct_data, region, "rf.Rds"))
 rq = readRDS(file.path(pct_data, region, "rq.Rds"))
 rnet = readRDS(file.path(pct_data, region, "rnet.Rds"))
